--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="usuario-info-card">
                     <div class="usuario-datos">
                         <span class="usuario-nombre">Usuario Actual</span>
-                        <span class="usuario-depto">Departamento</span>
+                        <span class="usuario-depto"></span>
                     </div>
                     <div class="token-status">
                         <span class="token-label">Token disponible:</span>
