--- a/historial.html
+++ b/historial.html
@@ -59,7 +59,7 @@
                         <!-- NUEVO: Filtro por recurso -->
                         <div class="filtros-group">
                             <label for="filtroRecurso">Filtrar por recurso:</label>
-                            <select id="filtroRecurso" onchange="aplicarFiltros()">
+                            <select id="filtroRecurso" onchange="filtrarSolicitudes()">
                                 <option value="todos">Todos</option>
                                 <option value="insumo">Insumos</option>
                                 <option value="papeleria">Papelería</option>
