--- a/admin.html
+++ b/admin.html
@@ -93,6 +93,11 @@
                         </select>
                     </div>
 
+                    <select id="filtroRecurso" onchange="filtrarSolicitudesAdmin()">
+                        <option value="todos">Todos los recursos</option>
+                        <option value="insumo">Insumos</option>
+                        <option value="papeleria">Papelería</option>
+                    </select>
                     <!-- Acciones principales -->
                     <div class="acciones-admin">
                         <button class="btn-admin-primary" onclick="recargarSolicitudes()" id="btnRecargarAdmin">
