--- a/admin.html
+++ b/admin.html
@@ -88,8 +88,9 @@
 
                         <select id="filtroTipoAdmin" onchange="filtrarSolicitudesAdmin()">
                             <option value="">Todos los tipos</option>
-                            <option value="ordinaria">📅 Ordinarias</option>
-                            <option value="juntas">👥 Para Juntas</option>
+                            <option value="ordinaria">Ordinaria</option>
+                            <option value="extraordinaria">Extraordinaria</option>
+                            <option value="juntas">Juntas</option>
                         </select>
                     </div>
 
