--- a/admin.html
+++ b/admin.html
@@ -307,6 +307,7 @@
         function limpiarFiltros() {
             document.getElementById('filtroEstadoAdmin').value = '';
             document.getElementById('filtroTipoAdmin').value = '';
+            document.getElementById('filtroRecurso').value = '';
             filtrarSolicitudesAdmin();
             showNotificationAdmin('Filtros limpiados', 'success');
         }
