--- a/admin.html
+++ b/admin.html
@@ -282,6 +282,11 @@
                     </div>
                     <select id="selectorAno"></select>
                     <select id="selectorArea"></select>
+                    <select id="selectorRecurso">
+                        <option value="">Todos los recursos</option>
+                        <option value="insumo">📦 Solo Insumos</option>
+                        <option value="papeleria">📝 Solo Papelería</option>
+                    </select>
                     <button class="btn-reporte-generar" onclick="ejecutarReporte()">
                         Generar Reporte
                     </button>
