--- a/inventario.html
+++ b/inventario.html
@@ -35,7 +35,7 @@
 
 <body>
     <!-- Header Admin se carga aquí -->
-    <div id="header-contain"></div>
+    <div id="header-container"></div>
 
     <main class="main-content admin-content">
 
