--- a/admin.html
+++ b/admin.html
@@ -203,8 +203,8 @@
             </div>
         </div>
     </div>
-
-    <!-- Modal de procesamiento de solicitudes -->
+<!--
+     Modal de procesamiento de solicitudes 
     <div id="procesarModal" class="modal-overlay" style="display: none;">
         <div class="modal-content procesar-modal">
             <div class="modal-header">
@@ -213,7 +213,7 @@
             </div>
             <div class="modal-body">
                 <div class="solicitud-proceso-info" id="solicitudProcesoInfo">
-                    <!-- Se llena dinámicamente -->
+                     Se llena dinámicamente 
                 </div>
 
                 <div class="proceso-acciones">
@@ -243,7 +243,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
 
