--- a/inventario.html
+++ b/inventario.html
@@ -88,7 +88,7 @@
                     <!-- ✅ AGREGAR ESTA LÍNEA: Cambiar clase -->
                     <div class="inventario-filtros">
                         <!-- ✅ AGREGAR ESTE SELECTOR MANUALMENTE -->
-                        <div class="filtro-tipo-recurso">
+                        <div class="filtro-grupo">
                             <label for="filtroTipoRecurso">Tipo de Recurso:</label>
                             <select id="filtroTipoRecurso" onchange="cambiarTipoRecurso()">
                                 <option value="insumo">📦 Insumos</option>
