--- a/inventario.html
+++ b/inventario.html
@@ -119,7 +119,7 @@
 
                     <!-- Acciones -->
                     <div class="acciones-inventario">
-                        <button class="btn-admin-primary" onclick="abrirModalNuevoInsumo()">
+                        <button class="btn-admin-primary" onclick="abrirModalNuevoItem()">
                             🆕 Nuevo Insumo
                         </button>
                         <button class="btn-admin-secondary" onclick="actualizarInventario()">
