--- a/inventario.html
+++ b/inventario.html
@@ -119,8 +119,8 @@
 
                     <!-- Acciones -->
                     <div class="acciones-inventario">
-                        <button class="btn-admin-primary" onclick="abrirModalNuevoItem()">
-                            🆕 Nuevo Insumo
+                        <button class="btn-admin-primary" id="btnNuevoItem" onclick="abrirModalNuevoItem('insumo')">
+                            📦 Nuevo Insumo
                         </button>
                         <button class="btn-admin-secondary" onclick="actualizarInventario()">
                             🔄 Actualizar
