--- a/inventario.html
+++ b/inventario.html
@@ -199,7 +199,7 @@
     <div id="footer-container"></div>
 
     <!-- Modal de Nuevo Insumo -->
-    <div id="nuevoInsumoModal" class="modal-overlay" style="display: none;">
+    <div id="nuevoItemModal" class="modal-overlay" style="display: none;">
         <div class="modal-content restock-modal">
             <div class="modal-header">
                 <h3>🆕 Nuevo Insumo</h3>
@@ -222,8 +222,8 @@
 
                     <div class="field-row">
                         <div class="form-group">
-                            <label for="categoriaInsumo">Categoría *</label>
-                            <select id="categoriaInsumo" required>
+                            <label for="categoriaItem ">Categoría *</label>
+                            <select id="categoriaItem " required>
                                 <option value="">Seleccionar categoría...</option>
                                 <!-- Se cargan dinámicamente -->
                             </select>
