--- a/inventario.html
+++ b/inventario.html
@@ -271,10 +271,10 @@
                 </form>
 
                 <div class="modal-actions">
-                    <button type="button" class="btn-admin-secondary" onclick="cerrarModalNuevoInsumo()">
+                    <button type="button" class="btn-admin-secondary" onclick="cerrarModalNuevoItem()">
                         Cancelar
                     </button>
-                    <button type="button" class="btn-admin-primary" onclick="confirmarNuevoInsumo()"
+                    <button type="button" class="btn-admin-primary" onclick="confirmarNuevoItem()"
                         id="btnConfirmarNuevoInsumo">
                         🆕 Crear Insumo
                     </button>
