--- a/inventario.html
+++ b/inventario.html
@@ -203,7 +203,7 @@
         <div class="modal-content restock-modal">
             <div class="modal-header">
                 <h3>🆕 Nuevo Insumo</h3>
-                <button class="modal-close" onclick="cerrarModalNuevoInsumo()">&times;</button>
+                <button class="modal-close" onclick="cerrarModalNuevoItem()">&times;</button>
             </div>
             <div class="modal-body">
                 <form id="nuevoInsumoForm" class="restock-form">
