--- a/inventario.html
+++ b/inventario.html
@@ -206,7 +206,7 @@
                 <button class="modal-close" onclick="cerrarModalNuevoItem()">&times;</button>
             </div>
             <div class="modal-body">
-                <form id="nuevoInsumoForm" class="restock-form">
+                <form id="nuevoItemForm" class="restock-form">
 
                     <!-- Información básica -->
                     <div class="form-group">
