Fix final finalicimo del final de los finales para toda la vida

--- a/inventario.html
+++ b/inventario.html
@@ -266,7 +266,7 @@
                             <!-- "ninguno" se mapeará a "todos" en el código -->
                         </select>
                         <small>Controla qué usuarios pueden ver este insumo al hacer solicitudes</small>
-                    </div>v>
+                    </div>
 
                 </form>
 
